# rndocs

./: README.md  pyproject.toml
rndocs/: cli.py  db.py  mcp_server.py  scraper.py
rndocs/data/: docs.db
