[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rndocs"
version = "0.1.0"
description = "React Native docs, offline — CLI + MCP server"
requires-python = ">=3.11"
dependencies = [
    "scrapling>=0.4",
    "click>=8.0",
    "mcp>=1.0",
]

[project.scripts]
rndocs     = "rndocs.cli:cli"
rndocs-mcp = "rndocs.mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rndocs*"]
